v1 :: refactoring + tests